init: backend for all the pages and all the sections

--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##home-page.home-page.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##home-page.home-page.json
@@ -62,6 +62,20 @@
           "sortable": false
         }
       },
+      "Testimonial": {
+        "edit": {
+          "label": "Testimonial",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "Testimonial",
+          "searchable": false,
+          "sortable": false
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -94,9 +108,9 @@
     "layouts": {
       "list": [
         "id",
-        "createdAt",
         "hero",
-        "services"
+        "services",
+        "ourSolutions"
       ],
       "edit": [
         [
@@ -114,6 +128,12 @@
         [
           {
             "name": "ourSolutions",
+            "size": 12
+          }
+        ],
+        [
+          {
+            "name": "Testimonial",
             "size": 12
           }
         ]
