--- a/config/sync/core-store.plugin_content_manager_configuration_components##pricing-details.pricing-details.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##pricing-details.pricing-details.json
@@ -1,14 +1,14 @@
 {
-  "key": "plugin_content_manager_configuration_components::testimonials.testimonials",
+  "key": "plugin_content_manager_configuration_components::pricing-details.pricing-details",
   "value": {
-    "uid": "testimonials.testimonials",
+    "uid": "pricing-details.pricing-details",
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "name",
-      "defaultSortBy": "name",
+      "mainField": "plan_name",
+      "defaultSortBy": "plan_name",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -20,109 +20,90 @@
           "sortable": false
         }
       },
-      "name": {
+      "monthly_price": {
         "edit": {
-          "label": "name",
+          "label": "monthly_price",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "name",
+          "label": "monthly_price",
           "searchable": true,
           "sortable": true
         }
       },
-      "review": {
+      "yearly_price": {
         "edit": {
-          "label": "review",
+          "label": "yearly_price",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "review",
+          "label": "yearly_price",
           "searchable": true,
           "sortable": true
         }
       },
-      "designation": {
+      "plan_name": {
         "edit": {
-          "label": "designation",
+          "label": "plan_name",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "designation",
+          "label": "plan_name",
           "searchable": true,
           "sortable": true
         }
       },
-      "company_name": {
+      "plan_features": {
         "edit": {
-          "label": "company_name",
+          "label": "plan_features",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "company_name",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "rating": {
-        "edit": {
-          "label": "rating",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "rating",
-          "searchable": true,
-          "sortable": true
+          "label": "plan_features",
+          "searchable": false,
+          "sortable": false
         }
       }
     },
     "layouts": {
       "list": [
         "id",
-        "name",
-        "review",
-        "designation"
+        "monthly_price",
+        "yearly_price"
       ],
       "edit": [
         [
           {
-            "name": "name",
-            "size": 6
+            "name": "monthly_price",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "yearly_price",
+            "size": 4
           },
           {
-            "name": "review",
+            "name": "plan_name",
             "size": 6
           }
         ],
         [
           {
-            "name": "designation",
-            "size": 6
-          },
-          {
-            "name": "company_name",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "rating",
-            "size": 6
+            "name": "plan_features",
+            "size": 12
           }
         ]
       ]
