--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##document-management.document-management.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##document-management.document-management.json
@@ -1,7 +1,7 @@
 {
-  "key": "plugin_content_manager_configuration_content_types::api::home-page.home-page",
+  "key": "plugin_content_manager_configuration_content_types::api::document-management.document-management",
   "value": {
-    "uid": "api::home-page.home-page",
+    "uid": "api::document-management.document-management",
     "settings": {
       "bulkable": true,
       "filterable": true,
@@ -48,86 +48,44 @@
           "sortable": false
         }
       },
-      "ourSolutions": {
+      "Solutions": {
         "edit": {
-          "label": "ourSolutions",
+          "label": "Solutions",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "ourSolutions",
+          "label": "Solutions",
           "searchable": false,
           "sortable": false
         }
       },
-      "Testimonial": {
+      "Testimonials": {
         "edit": {
-          "label": "Testimonial",
+          "label": "Testimonials",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "Testimonial",
+          "label": "Testimonials",
           "searchable": false,
           "sortable": false
         }
       },
-      "ourStrategy": {
+      "About": {
         "edit": {
-          "label": "ourStrategy",
+          "label": "About",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "ourStrategy",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "pricing": {
-        "edit": {
-          "label": "pricing",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "pricing",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "aboutUs": {
-        "edit": {
-          "label": "aboutUs",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "aboutUs",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "howItWorks": {
-        "edit": {
-          "label": "howItWorks",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "howItWorks",
+          "label": "About",
           "searchable": false,
           "sortable": false
         }
@@ -166,7 +124,7 @@
         "id",
         "hero",
         "services",
-        "ourSolutions"
+        "Solutions"
       ],
       "edit": [
         [
@@ -183,37 +141,19 @@
         ],
         [
           {
-            "name": "ourSolutions",
+            "name": "Solutions",
             "size": 12
           }
         ],
         [
           {
-            "name": "Testimonial",
+            "name": "Testimonials",
             "size": 12
           }
         ],
         [
           {
-            "name": "ourStrategy",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "pricing",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "aboutUs",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "howItWorks",
+            "name": "About",
             "size": 12
           }
         ]
