chore: persistance with local repo

--- a/config/sync/core-store.plugin_content_manager_configuration_components##about.about.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##about.about.json
@@ -16,8 +16,8 @@
         "edit": {},
         "list": {
           "label": "id",
-          "searchable": false,
-          "sortable": false
+          "searchable": true,
+          "sortable": true
         }
       },
       "title": {
