--- a/config/sync/core-store.plugin_content_manager_configuration_components##testimonial-section.testimonial-section.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##testimonial-section.testimonial-section.json
@@ -1,14 +1,14 @@
 {
-  "key": "plugin_content_manager_configuration_components::pricing-details.pricing-details",
+  "key": "plugin_content_manager_configuration_components::testimonial-section.testimonial-section",
   "value": {
-    "uid": "pricing-details.pricing-details",
+    "uid": "testimonial-section.testimonial-section",
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "plan_name",
-      "defaultSortBy": "plan_name",
+      "mainField": "title",
+      "defaultSortBy": "title",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -20,58 +20,44 @@
           "sortable": true
         }
       },
-      "monthly_price": {
+      "title": {
         "edit": {
-          "label": "monthly_price",
+          "label": "title",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "monthly_price",
+          "label": "title",
           "searchable": true,
           "sortable": true
         }
       },
-      "yearly_price": {
+      "description": {
         "edit": {
-          "label": "yearly_price",
+          "label": "description",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "yearly_price",
+          "label": "description",
           "searchable": true,
           "sortable": true
         }
       },
-      "plan_name": {
+      "testimonialListing": {
         "edit": {
-          "label": "plan_name",
+          "label": "testimonialListing",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "plan_name",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "plan_features": {
-        "edit": {
-          "label": "plan_features",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "plan_features",
+          "label": "testimonialListing",
           "searchable": false,
           "sortable": false
         }
@@ -80,30 +66,24 @@
     "layouts": {
       "list": [
         "id",
-        "monthly_price",
-        "yearly_price",
-        "plan_name"
+        "title",
+        "description",
+        "testimonialListing"
       ],
       "edit": [
         [
           {
-            "name": "monthly_price",
-            "size": 4
+            "name": "title",
+            "size": 6
           },
           {
-            "name": "yearly_price",
-            "size": 4
-          }
-        ],
-        [
-          {
-            "name": "plan_name",
+            "name": "description",
             "size": 6
           }
         ],
         [
           {
-            "name": "plan_features",
+            "name": "testimonialListing",
             "size": 12
           }
         ]
