--- a/config/sync/core-store.plugin_content_manager_configuration_components##pricing-details.pricing-details.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##pricing-details.pricing-details.json
@@ -1,14 +1,14 @@
 {
-  "key": "plugin_content_manager_configuration_components::services.list-of-services",
+  "key": "plugin_content_manager_configuration_components::pricing-details.pricing-details",
   "value": {
-    "uid": "services.list-of-services",
+    "uid": "pricing-details.pricing-details",
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "name",
-      "defaultSortBy": "name",
+      "mainField": "plan_name",
+      "defaultSortBy": "plan_name",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -20,71 +20,91 @@
           "sortable": true
         }
       },
-      "name": {
+      "monthly_price": {
         "edit": {
-          "label": "name",
+          "label": "monthly_price",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "name",
+          "label": "monthly_price",
           "searchable": true,
           "sortable": true
         }
       },
-      "description": {
+      "yearly_price": {
         "edit": {
-          "label": "description",
+          "label": "yearly_price",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "description",
+          "label": "yearly_price",
           "searchable": true,
           "sortable": true
         }
       },
-      "hoverDescription": {
+      "plan_name": {
         "edit": {
-          "label": "hoverDescription",
+          "label": "plan_name",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "hoverDescription",
+          "label": "plan_name",
           "searchable": true,
           "sortable": true
+        }
+      },
+      "plan_features": {
+        "edit": {
+          "label": "plan_features",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "plan_features",
+          "searchable": false,
+          "sortable": false
         }
       }
     },
     "layouts": {
       "list": [
         "id",
-        "name",
-        "description",
-        "hoverDescription"
+        "monthly_price",
+        "yearly_price",
+        "plan_name"
       ],
       "edit": [
         [
           {
-            "name": "name",
-            "size": 6
+            "name": "monthly_price",
+            "size": 4
           },
           {
-            "name": "description",
+            "name": "yearly_price",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "plan_name",
             "size": 6
           }
         ],
         [
           {
-            "name": "hoverDescription",
-            "size": 6
+            "name": "plan_features",
+            "size": 12
           }
         ]
       ]
