--- a/config/sync/core-store.plugin_content_manager_configuration_components##steps.strategy-steps.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##steps.strategy-steps.json
@@ -1,14 +1,14 @@
 {
-  "key": "plugin_content_manager_configuration_components::services.list-of-services",
+  "key": "plugin_content_manager_configuration_components::steps.strategy-steps",
   "value": {
-    "uid": "services.list-of-services",
+    "uid": "steps.strategy-steps",
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "name",
-      "defaultSortBy": "name",
+      "mainField": "title",
+      "defaultSortBy": "title",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -20,70 +20,72 @@
           "sortable": true
         }
       },
-      "name": {
+      "title": {
         "edit": {
-          "label": "name",
+          "label": "title",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "name",
+          "label": "title",
           "searchable": true,
           "sortable": true
         }
       },
-      "description": {
+      "strategy_step_list": {
         "edit": {
-          "label": "description",
+          "label": "strategy_step_list",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "description",
-          "searchable": true,
-          "sortable": true
+          "label": "strategy_step_list",
+          "searchable": false,
+          "sortable": false
         }
       },
-      "hoverDescription": {
+      "strategy_step_image": {
         "edit": {
-          "label": "hoverDescription",
+          "label": "strategy_step_image",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "hoverDescription",
-          "searchable": true,
-          "sortable": true
+          "label": "strategy_step_image",
+          "searchable": false,
+          "sortable": false
         }
       }
     },
     "layouts": {
       "list": [
         "id",
-        "name",
-        "description",
-        "hoverDescription"
+        "title",
+        "strategy_step_list",
+        "strategy_step_image"
       ],
       "edit": [
         [
           {
-            "name": "name",
-            "size": 6
-          },
-          {
-            "name": "description",
+            "name": "title",
             "size": 6
           }
         ],
         [
           {
-            "name": "hoverDescription",
+            "name": "strategy_step_list",
+            "size": 12
+          }
+        ],
+        [
+          {
+            "name": "strategy_step_image",
             "size": 6
           }
         ]
