--- a/config/sync/core-store.plugin_content_manager_configuration_components##strategy.strategy.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##strategy.strategy.json
@@ -1,14 +1,14 @@
 {
-  "key": "plugin_content_manager_configuration_components::list.group-of-items",
+  "key": "plugin_content_manager_configuration_components::strategy.strategy",
   "value": {
-    "uid": "list.group-of-items",
+    "uid": "strategy.strategy",
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "item",
-      "defaultSortBy": "item",
+      "mainField": "title",
+      "defaultSortBy": "title",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -20,31 +20,52 @@
           "sortable": true
         }
       },
-      "item": {
+      "title": {
         "edit": {
-          "label": "item",
+          "label": "title",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "item",
+          "label": "title",
           "searchable": true,
           "sortable": true
+        }
+      },
+      "steps": {
+        "edit": {
+          "label": "steps",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "steps",
+          "searchable": false,
+          "sortable": false
         }
       }
     },
     "layouts": {
       "list": [
         "id",
-        "item"
+        "title",
+        "steps"
       ],
       "edit": [
         [
           {
-            "name": "item",
+            "name": "title",
             "size": 6
+          }
+        ],
+        [
+          {
+            "name": "steps",
+            "size": 12
           }
         ]
       ]
