--- a/config/sync/core-store.plugin_content_manager_configuration_components##testimonial-section.testimonial-section.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##testimonial-section.testimonial-section.json
@@ -1,14 +1,14 @@
 {
-  "key": "plugin_content_manager_configuration_components::services.list-of-services",
+  "key": "plugin_content_manager_configuration_components::testimonial-section.testimonial-section",
   "value": {
-    "uid": "services.list-of-services",
+    "uid": "testimonial-section.testimonial-section",
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "name",
-      "defaultSortBy": "name",
+      "mainField": "title",
+      "defaultSortBy": "title",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -20,16 +20,16 @@
           "sortable": true
         }
       },
-      "name": {
+      "title": {
         "edit": {
-          "label": "name",
+          "label": "title",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "name",
+          "label": "title",
           "searchable": true,
           "sortable": true
         }
@@ -48,32 +48,32 @@
           "sortable": true
         }
       },
-      "hoverDescription": {
+      "testimonialListing": {
         "edit": {
-          "label": "hoverDescription",
+          "label": "testimonialListing",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "hoverDescription",
-          "searchable": true,
-          "sortable": true
+          "label": "testimonialListing",
+          "searchable": false,
+          "sortable": false
         }
       }
     },
     "layouts": {
       "list": [
         "id",
-        "name",
+        "title",
         "description",
-        "hoverDescription"
+        "testimonialListing"
       ],
       "edit": [
         [
           {
-            "name": "name",
+            "name": "title",
             "size": 6
           },
           {
@@ -83,8 +83,8 @@
         ],
         [
           {
-            "name": "hoverDescription",
-            "size": 6
+            "name": "testimonialListing",
+            "size": 12
           }
         ]
       ]
