--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##compliance-regulation.compliance-regulation.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##compliance-regulation.compliance-regulation.json
@@ -1,7 +1,7 @@
 {
-  "key": "plugin_content_manager_configuration_content_types::api::home-page.home-page",
+  "key": "plugin_content_manager_configuration_content_types::api::compliance-regulation.compliance-regulation",
   "value": {
-    "uid": "api::home-page.home-page",
+    "uid": "api::compliance-regulation.compliance-regulation",
     "settings": {
       "bulkable": true,
       "filterable": true,
@@ -20,100 +20,58 @@
           "sortable": true
         }
       },
-      "hero": {
+      "Hero": {
         "edit": {
-          "label": "hero",
+          "label": "Hero",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "hero",
+          "label": "Hero",
           "searchable": false,
           "sortable": false
         }
       },
-      "services": {
+      "Services": {
         "edit": {
-          "label": "services",
+          "label": "Services",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "services",
+          "label": "Services",
           "searchable": false,
           "sortable": false
         }
       },
-      "ourSolutions": {
+      "Solutions": {
         "edit": {
-          "label": "ourSolutions",
+          "label": "Solutions",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "ourSolutions",
+          "label": "Solutions",
           "searchable": false,
           "sortable": false
         }
       },
-      "ourStrategy": {
+      "About": {
         "edit": {
-          "label": "ourStrategy",
+          "label": "About",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "ourStrategy",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "pricing": {
-        "edit": {
-          "label": "pricing",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "pricing",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "aboutUs": {
-        "edit": {
-          "label": "aboutUs",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "aboutUs",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "howItWorks": {
-        "edit": {
-          "label": "howItWorks",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "howItWorks",
+          "label": "About",
           "searchable": false,
           "sortable": false
         }
@@ -164,50 +122,32 @@
     "layouts": {
       "list": [
         "id",
-        "createdAt",
-        "hero",
-        "services"
+        "Hero",
+        "Services",
+        "Solutions"
       ],
       "edit": [
         [
           {
-            "name": "hero",
+            "name": "Hero",
             "size": 12
           }
         ],
         [
           {
-            "name": "services",
+            "name": "Services",
             "size": 12
           }
         ],
         [
           {
-            "name": "ourSolutions",
+            "name": "Solutions",
             "size": 12
           }
         ],
         [
           {
-            "name": "ourStrategy",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "pricing",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "aboutUs",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "howItWorks",
+            "name": "About",
             "size": 12
           }
         ],
