--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##claims-and-billing.claims-and-billing.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##claims-and-billing.claims-and-billing.json
@@ -124,7 +124,7 @@
         "id",
         "Hero",
         "Services",
-        "Solutions"
+        "Testimonial"
       ],
       "edit": [
         [
