--- a/config/sync/core-store.plugin_content_manager_configuration_components##testimonial-section.testimonial-section.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##testimonial-section.testimonial-section.json
@@ -16,8 +16,8 @@
         "edit": {},
         "list": {
           "label": "id",
-          "searchable": true,
-          "sortable": true
+          "searchable": false,
+          "sortable": false
         }
       },
       "title": {
