--- a/config/sync/core-store.plugin_content_manager_configuration_components##social-media-links.social-media-link.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##social-media-links.social-media-link.json
@@ -1,7 +1,7 @@
 {
-  "key": "plugin_content_manager_configuration_components::services.list-of-services",
+  "key": "plugin_content_manager_configuration_components::social-media-links.social-media-link",
   "value": {
-    "uid": "services.list-of-services",
+    "uid": "social-media-links.social-media-link",
     "settings": {
       "bulkable": true,
       "filterable": true,
@@ -16,8 +16,8 @@
         "edit": {},
         "list": {
           "label": "id",
-          "searchable": false,
-          "sortable": false
+          "searchable": true,
+          "sortable": true
         }
       },
       "name": {
@@ -34,30 +34,16 @@
           "sortable": true
         }
       },
-      "description": {
+      "link": {
         "edit": {
-          "label": "description",
+          "label": "link",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "description",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "hoverDescription": {
-        "edit": {
-          "label": "hoverDescription",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "hoverDescription",
+          "label": "link",
           "searchable": true,
           "sortable": true
         }
@@ -67,8 +53,7 @@
       "list": [
         "id",
         "name",
-        "description",
-        "hoverDescription"
+        "link"
       ],
       "edit": [
         [
@@ -77,13 +62,7 @@
             "size": 6
           },
           {
-            "name": "description",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "hoverDescription",
+            "name": "link",
             "size": 6
           }
         ]
