chore: pricing and schema changes

--- a/config/sync/core-store.plugin_content_manager_configuration_components##pricing-details.pricing-details.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##pricing-details.pricing-details.json
@@ -81,21 +81,20 @@
       "list": [
         "id",
         "monthly_price",
-        "yearly_price",
-        "plan_name"
+        "yearly_price"
       ],
       "edit": [
         [
           {
             "name": "monthly_price",
             "size": 4
-          },
-          {
-            "name": "yearly_price",
-            "size": 4
           }
         ],
         [
+          {
+            "name": "yearly_price",
+            "size": 4
+          },
           {
             "name": "plan_name",
             "size": 6
