--- a/config/sync/core-store.plugin_content_manager_configuration_components##contact-us.contact-us.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##contact-us.contact-us.json
@@ -7,8 +7,8 @@
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "id",
-      "defaultSortBy": "id",
+      "mainField": "phone",
+      "defaultSortBy": "phone",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -16,8 +16,8 @@
         "edit": {},
         "list": {
           "label": "id",
-          "searchable": true,
-          "sortable": true
+          "searchable": false,
+          "sortable": false
         }
       },
       "address": {
