chore: updating permissions

--- a/config/sync/core-store.plugin_content_manager_configuration_components##contact-us.contact-us.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##contact-us.contact-us.json
@@ -7,8 +7,8 @@
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "phone",
-      "defaultSortBy": "phone",
+      "mainField": "id",
+      "defaultSortBy": "id",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
