--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##claims-and-billing.claims-and-billing.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##claims-and-billing.claims-and-billing.json
@@ -34,20 +34,6 @@
           "sortable": false
         }
       },
-      "Services": {
-        "edit": {
-          "label": "Services",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "Services",
-          "searchable": false,
-          "sortable": false
-        }
-      },
       "Solutions": {
         "edit": {
           "label": "Solutions",
@@ -72,20 +58,6 @@
         },
         "list": {
           "label": "About",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "Testimonial": {
-        "edit": {
-          "label": "Testimonial",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "Testimonial",
           "searchable": false,
           "sortable": false
         }
@@ -123,19 +95,12 @@
       "list": [
         "id",
         "Hero",
-        "Services",
-        "Testimonial"
+        "Solutions"
       ],
       "edit": [
         [
           {
             "name": "Hero",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "Services",
             "size": 12
           }
         ],
@@ -148,12 +113,6 @@
         [
           {
             "name": "About",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "Testimonial",
             "size": 12
           }
         ]
