init : ryzolve admin panel

--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##document-management.document-management.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##document-management.document-management.json
@@ -124,9 +124,9 @@
     "layouts": {
       "list": [
         "id",
-        "Solutions",
         "Hero",
-        "createdBy"
+        "Solutions",
+        "About"
       ],
       "edit": [
         [
