--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##home-page.home-page.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##home-page.home-page.json
@@ -152,9 +152,9 @@
     "layouts": {
       "list": [
         "id",
-        "createdAt",
         "hero",
-        "createdBy"
+        "ourSolutions",
+        "ourStrategy"
       ],
       "edit": [
         [
