--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##testimonial.testimonial.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##testimonial.testimonial.json
@@ -96,9 +96,9 @@
     "layouts": {
       "list": [
         "id",
+        "testimonial",
         "createdAt",
-        "updatedAt",
-        "testimonial"
+        "updatedAt"
       ],
       "edit": [
         [
