--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##compliance-regulation.compliance-regulation.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##compliance-regulation.compliance-regulation.json
@@ -126,7 +126,7 @@
         "id",
         "Hero",
         "Solutions",
-        "createdBy"
+        "About"
       ],
       "edit": [
         [
