--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "strapi",
+  "name": "server",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "config-sync export --yes && strapi develop ",
-    "start": "config-sync import --yes && strapi start",
+    "develop": "strapi develop",
+    "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "cs": "config-sync",
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "^4.13.1",
-    "@strapi/plugin-i18n": "4.13.1",
-    "@strapi/plugin-users-permissions": "4.13.1",
-    "@strapi/provider-email-sendgrid": "^4.13.4",
-    "@strapi/provider-upload-cloudinary": "4.13.1",
-    "@strapi/strapi": "4.13.1",
+    "@strapi/plugin-graphql": "4.14.4",
+    "@strapi/plugin-i18n": "4.14.4",
+    "@strapi/plugin-users-permissions": "4.14.4",
+    "@strapi/provider-email-sendgrid": "^4.15.0",
+    "@strapi/provider-upload-cloudinary": "^4.15.1",
+    "@strapi/strapi": "4.14.4",
+    "better-sqlite3": "8.6.0",
     "patch-package": "^8.0.0",
-    "pg": "8.8.0",
+    "pg": "^8.11.3",
     "postinstall-postinstall": "^2.1.0",
-    "strapi-plugin-config-sync": "^1.1.1"
+    "strapi-tiptap-editor": "^0.9.12",
+    "stripe": "^13.10.0"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "35d7a084-3088-4d0b-869e-f503693ee8e5"
+    "uuid": "42898d77-65a0-488f-bf7f-da5c93e100d7"
   },
   "engines": {
-    "node": ">=16.x.x",
+    "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
